fixed css alignment bug on objective description

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -83,11 +83,13 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   // font-family: "Lucida Grande";
 }
 
 .case-title h1 {
   position: absolute;
+  bottom: 3px;
   cursor:help;
   z-index: 99;
 }
